k8s_test (nepouživané)/ingress-node.yaml
#Príprava pre možné doplnenie Ingress pre Kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: myapp-ssl-prod
spec:
  tls:
    - hosts:
        - app.myumbapp.com # Tu by trebalo vložiť DNS podľa domény, ktorú by som mal dostupnú (Keďže mám lokálny Kubernetes klaster táto možnosť teraz nie je dostupná)
      secretName: tls-secret-hv47c
  rules:
    - host: app.myumbapp.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: myapp-service
                port:
                  number: 80
